# rust-be-template-2

./: .gitignore  Cargo.toml  TODO  build.rs  build.sh  diesel.toml
.config/: config.toml
migrations/2025-02-18-045958_posts_tables/: up.sql
migrations/2025-02-21-054839_user_roles/: down.sql  up.sql
migrations/2025-02-21-151418_now_for_posts/: down.sql  up.sql
migrations/2025-03-02-065637_posts_metadata/: down.sql  up.sql
migrations/2025-03-02-103951_upvotes/: down.sql  up.sql
migrations/2025-03-02-104316_comment_upvotes/: down.sql  up.sql
migrations/2025-03-04-002413_drop_unnecessary_upvote_count_column/: down.sql  up.sql
migrations/2025-03-04-043420_country_language_subdivision_phone_and_currency_codes/: down.sql  up.sql
migrations/2025-03-05-012442_language_insert/: down.sql  up.sql
migrations/2025-03-05-013733_currency_insert/: down.sql  up.sql
migrations/2025-03-05-020840_drop_iso_phone_prefix_table/: down.sql  up.sql
migrations/2025-03-05-034435_change_fkey_to_lang_table/: down.sql  up.sql
migrations/2025-03-05-035450_country_insert/: down.sql  up.sql
migrations/2025-03-06-044730_country_emoji_insert/: down.sql  up.sql
migrations/2025-03-06-054004_country_subdivisions_insert/: down.sql  up.sql
migrations/2025-03-07-001553_remap_country_language_fkey/: down.sql  up.sql
migrations/2025-03-22-104939_profile_picture_history/: down.sql  up.sql
migrations/2025-04-14-075418_downvote_and_denormalized_count/: down.sql  up.sql
migrations/2025-04-14-111552_post_tags/: down.sql  up.sql
migrations/2025-04-29-005518_i18n/: down.sql  up.sql
migrations/2025-05-25-150252_comment_timestamps/: down.sql  up.sql
src/: main.rs
src/domain/: mod.rs  repository_traits.rs  schema.rs
src/domain/country/: iso_country.rs  mod.rs
src/domain/country/converter/: country_converter.rs
src/domain/country/dto/: country_dto.rs
src/domain/country/repository/: iso_country_diesel_async_pg_repository.rs  iso_country_diesel_async_repository.rs  iso_country_repository.rs  iso_country_static.rs  iso_country_static_gen.rs
src/domain/country/service/: country_service.rs
src/domain/country_subdivision/: iso_country_subdivision.rs  mod.rs
src/domain/country_subdivision/converter/: country_subdivision_converter.rs
src/domain/country_subdivision/dto/: country_subdivision_dto.rs
src/domain/country_subdivision/repository/: iso_country_subdivision_diesel_async_pg_repository.rs  iso_country_subdivision_repository.rs  iso_country_subdivision_static.rs  iso_country_subdivision_static_gen.rs
src/domain/country_subdivision/service/: country_subdivision_service.rs
src/state/: mod.rs  server_env_config.rs  server_state.rs
src/utility/tracing/: mod.rs  setup_tracing.rs
